<resources>
    <string name="app_name">rppba</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="stockItems">Materials</string>
    <string name="products">Products</string>
    <string name="productsInfo">ProductsInfo</string>
    <string name="bills">Bills</string>
    <string name="manufacture">Manufacture</string>
    <string name="sendButton">Send material to manufacture</string>
    <string name="getButton">Get material from manufacture</string>
    <string name="Unsorted">Unsorted</string>
    <string name="A100">100</string>
    <string name="Move">Move</string>
    <string name="supply">Supply</string>
    <string name="selling">Selling</string>
    <string name="supplier_customer">Supplier/Customer</string>
    <string name="waybill_number">Waybill number</string>
    <string name="passed_first_test">Passed first test</string>
    <string name="passed_second_test">Passed second test</string>
    <string name="save">Save</string>
    <string name="product_title">Product title</string>
    <string name="amount">Amount</string>
    <string name="add_row">Add row</string>


</resources>
